// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post input updates with keystrokes and clears on submit 1`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Entry:
    <input
      name="entry"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`post input updates with keystrokes and clears on submit 2`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Entry:
    <input
      name="entry"
      onChange={[Function]}
      type="text"
      value="h"
    />
  </label>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`post input updates with keystrokes and clears on submit 3`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Entry:
    <input
      name="entry"
      onChange={[Function]}
      type="text"
      value="he"
    />
  </label>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`post input updates with keystrokes and clears on submit 4`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Entry:
    <input
      name="entry"
      onChange={[Function]}
      type="text"
      value="hello, world"
    />
  </label>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`post input updates with keystrokes and clears on submit 5`] = `
<form
  onSubmit={[Function]}
>
  <label>
    Entry:
    <input
      name="entry"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;
